Authentication process based on cookie based JWT token fully complete