@@ -2,10 +2,13 @@ package com.swiss.bank.user.service.config;
 
 import java.util.Collections;
 import java.util.List;
+
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.method.configuration.EnableReactiveMethodSecurity;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
+import org.springframework.security.config.web.server.SecurityWebFiltersOrder;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -20,37 +23,39 @@ import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 @EnableReactiveMethodSecurity
 public class WebSecurityConfig {
 
-  private static final List<String> ALLOWED_ORIGINS = Collections.unmodifiableList(
-      List.of("http://localhost:10000", "http://localhost:10001", "http://localhost:10002",
-          "http://localhost:10003", "http://localhost:10004", "http://localhost:10005",
-          "http://localhost:10006", "http://localhost:10007", "https://www.google.com"));
-  private static final List<String> ALLOWED_METHODS =
-      Collections.unmodifiableList(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+	private static final List<String> ALLOWED_ORIGINS = Collections.unmodifiableList(
+			List.of("http://localhost:10000", "http://localhost:10001", "http://localhost:10002", "http://localhost:10003", "http://localhost:10004",
+					"http://localhost:10005", "http://localhost:10006", "http://localhost:10007", "https://www.google.com"));
+	private static final List<String> ALLOWED_METHODS = Collections.unmodifiableList(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
 
-  @Bean
-  CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(ALLOWED_ORIGINS);
-    configuration.setAllowedMethods(ALLOWED_METHODS);
-    configuration.setAllowCredentials(true);
-    configuration.addAllowedHeader("*");
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", configuration);
-    return source;
-  }
+	@Autowired
+	private JwtRequestFilter jwtRequestFilter;
 
-  @Bean
-  PasswordEncoder bCryptPasswordEncoder() {
-    return new BCryptPasswordEncoder();
-  }
-  
-  @Bean
-  SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity serverHttpSecurity) {
-    return serverHttpSecurity
-        .csrf(csrf -> csrf.disable())
-        .securityContextRepository(NoOpServerSecurityContextRepository.getInstance())
-        .authorizeExchange(exchange -> exchange.pathMatchers("/auth/**").permitAll()
-            .pathMatchers("/user/**").authenticated())
-        .build();
-  }
+	@Bean
+	CorsConfigurationSource corsConfigurationSource() {
+		CorsConfiguration configuration = new CorsConfiguration();
+		configuration.setAllowedOrigins(ALLOWED_ORIGINS);
+		configuration.setAllowedMethods(ALLOWED_METHODS);
+		configuration.setAllowCredentials(true);
+		configuration.addAllowedHeader("*");
+		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+		source.registerCorsConfiguration("/**", configuration);
+		return source;
+	}
+
+	@Bean
+	PasswordEncoder bCryptPasswordEncoder() {
+		return new BCryptPasswordEncoder();
+	}
+
+	@Bean
+	SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity serverHttpSecurity) {
+		return serverHttpSecurity.csrf(csrf -> csrf.disable())
+				.securityContextRepository(NoOpServerSecurityContextRepository.getInstance())
+				.authorizeExchange(exchange -> exchange
+						.pathMatchers("/auth/**", "/user/**").permitAll()
+						.anyExchange().authenticated())
+				.addFilterBefore(jwtRequestFilter, SecurityWebFiltersOrder.AUTHENTICATION)
+				.build();
+	}
 }
